[project]
name = "keep-me-healthy"
version = "0.1.0"
description = "Streamlit app to fetch healthy grocery recommendations via workflow API."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.38",
  "httpx>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-dotenv>=1.0",
  "diskcache>=5.6",
  "tenacity>=8.2",
]
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.6",
  "mypy>=1.11",
  "pytest-mock>=3.14",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app", "client", "models", "settings"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
  "E", "F", "I", "B", "UP", "SIM", "ASYNC", "S", "TID", "Q",
]
ignore = [
  "B008", # allow function calls in defaults (streamlit patterns)
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
